# blake2b-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yaml  test.yaml
blake2b/: __init__.py
src/: blake2b.rs  lib.rs
tests/: reference_impl.py  test_implementations_are_equivalent.py
